基本实现开题报告功能。之后迁移一下或改进一下AI聊天功能，就结项

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,11 @@ dependencies {
     implementation libs.multidex
 
     //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation libs.retrofit
+    implementation libs.converter.scalars
 
+
+    implementation libs.android.mail
+    //cardview
+    implementation libs.material.v140
 }
