--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Base.Theme.TypeChatv2"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ChatWithGemini"
+            android:exported="false" />
+        <activity
             android:name=".activities.ShowAPP"
             android:exported="false" />
         <activity
