全部功能整合完毕，包括通知、和AI聊天

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,12 @@ dependencies {
     implementation libs.material.v140
 
 
-    implementation(libs.firebase.vertexai)
+    implementation libs.firebase.vertexai
 
-    implementation(libs.guava)
+    implementation libs.guava
 
-    implementation(libs.reactive.streams)
+    implementation libs.reactive.streams
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
