--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.3.0"
 androidMail = "1.6.5"
+colorpicker = "0.0.13"
 firebaseBom = "33.0.0"
 firebaseCommon = "21.0.0"
 firebaseVertexai = "16.0.0-beta01"
@@ -28,6 +29,8 @@ firebaseFirestore = "25.0.0"
 [libraries]
 android-activation = { module = "com.sun.mail:android-activation", version.ref = "androidMail" }
 android-mail = { module = "com.sun.mail:android-mail", version.ref = "androidMail" }
+colorpicker = { module = "com.flask:colorpicker", version.ref = "colorpicker" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-common = { module = "com.google.firebase:firebase-common", version.ref = "firebaseCommon" }
